dw-manifests/cic-dw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cic-data-warehouse-svc
spec:
  selector:
    app: cic-dw
  type: ClusterIP
  ports:
    - name: server
      protocol: TCP
      port: 80
      targetPort: 3000
