dw-manifests/cic-dw/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: data-warehouse
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`data-warehouse.sarafu.network`)
      kind: Rule
      services:
        - name: cic-data-warehouse-svc
          port: server
  tls:
    secretName: data-warehouse.sarafu.network.cert
